@@ -29,7 +29,7 @@ import org.eclipse.swt.widgets.Display;
 public class OprofileLaunchConfigurationDelegate extends AbstractOprofileLaunchConfigurationDelegate {
 
 	@Override
-	protected boolean preExec(LaunchOptions options, OprofileDaemonEvent[] daemonEvents) {
+	protected boolean preExec(LaunchOptions options, OprofileDaemonEvent[] daemonEvents, ILaunch launch) {
 		//set up and launch the oprofile daemon
 		try {
 			IProject project = getProject();
@@ -65,6 +65,10 @@ public class OprofileLaunchConfigurationDelegate extends AbstractOprofileLaunchC
 			//note: since the daemon is only profiling for the specific image we told 
 			// it to, no matter to start the daemon before the binary itself is run
 			oprofileStartCollection();
+			
+			//add a listener for termination of the launch prior to execution of launch
+			ILaunchManager lmgr = DebugPlugin.getDefault().getLaunchManager();
+			lmgr.addLaunchListener(new LaunchTerminationWatcher(launch));
 		} catch (OpcontrolException oe) {
 			OprofileCorePlugin.showErrorDialog("opcontrolProvider", oe); //$NON-NLS-1$
 			return false;
@@ -74,9 +78,7 @@ public class OprofileLaunchConfigurationDelegate extends AbstractOprofileLaunchC
 
 	@Override
 	protected void postExec(LaunchOptions options, OprofileDaemonEvent[] daemonEvents, ILaunch launch, Process process) {
-		//add a listener for termination of the launch
-		ILaunchManager lmgr = DebugPlugin.getDefault().getLaunchManager();
-		lmgr.addLaunchListener(new LaunchTerminationWatcher(launch));
+		// do nothing here since the termination listener already registered will handle everything needed
 	}
 	
 	//A class used to listen for the termination of the current launch, and 
